--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "a-big-triangle": "^1.0.0",
+    "browserify": "^8.1.1",
     "dom-css": "^1.0.6",
     "domready": "^1.0.7",
     "gl-texture2d": "^2.0.8",
@@ -22,11 +23,13 @@
     "glslify": "^1.6.0",
     "lena": "^1.0.0",
     "raf-loop": "^1.0.1",
+    "uglify-js": "^2.4.16",
     "webgl-context": "^2.1.1",
     "wzrd": "^1.2.1",
     "xtend": "^4.0.0"
   },
   "scripts": {
+    "bundle": "browserify demo.js -t glslify | uglifyjs -cm > bundle.js",
     "start": "wzrd demo.js:bundle.js -- -d -t glslify"
   },
   "keywords": [
